# WiGuard-Nexus-Packet-Tracer-Intelligence

./: .env.example  .gitignore  ADMIN_GUIDE.md  API.md  BACKEND_FIX_NOTES.md  CHANGELOG.md  DEPLOYMENT.md  DISCLAIMER.md  Dockerfile  LICENSE  LIVE_INGESTION.md  PACKET_TRACER_CONVERSION.md  PRIVACY.md  README.md  SECURITY.md  TEST_RESULTS.md  USER_GUIDE.md  VERSION  app.py  diagnose_backend.py  docker-compose.yml  make_release.bat  openapi.yaml  pyproject.toml  requirements-product.txt  requirements.txt  start_backend.sh
data/: state.json  wiguard.sqlite3  wiguard.sqlite3-shm  wiguard.sqlite3-wal
docs/: ARCHITECTURE.md  DATA_IMPORT_GUIDE.md  DEMO_SCRIPT.md  FINAL_PROJECT_REPORT.md  FINAL_RELEASE_AUDIT_v5_16_1.md  PARSER_GUIDE.md  REPORTING.md  RISK_ENGINE.md  TROUBLESHOOTING.md
tests/: conftest.py  test_security_upload.py  test_sqlite_auth.py  test_storage_atomic.py  test_v5123_product_hardening.py  test_v5124_pkt_converter_integration.py  test_v5125_ui_data_cleanup.py  test_v5126_code_cleanup.py  test_v5127_diagnose_fix.py  test_v5129_packet_tracer_extraction_fixes.py  test_v512_deep_payload_import.py  test_v5130_json_pkt_data_extraction.py  test_v5131_import_cleanup.py  test_v5132_object_explorer_safe.py  test_v5140_network_intelligence.py  test_v5150_product_ui_threat_map.py  test_v516_professional_pipeline.py  test_v53_product_layer.py  test_v54_enterprise_core.py  test_v55_packet_tracer_intelligence.py  test_v582_page_data_hardening.py  test_v584_deep_structured_import.py  test_v585_lab_matrix_intelligence.py  test_v586_native_pkt_intelligence.py  (+11 more)
(+113 files in other folders)
