[project]
name = "wiguard-nexus"
version = "5.7.0"
description = "Wireless and wired policy evidence intelligence platform"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0,<4.0",
  "Werkzeug>=3.0,<4.0",
  "reportlab>=4.0,<5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
